force-app/main/default/objects/CRM_User__c/CRM_User__c.object-meta.xml
<CustomObject>
    <label>CRM User</label>
    <nameField>
        <label>CRM User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>