force-app/main/default/objects/CRM_User__c/fields/Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this CRM User is an admin.</description>
    <inlineHelpText>Indicates whether this CRM User is an admin.</inlineHelpText>
    <label>Admin User</label>
    <type>Checkbox</type>
</CustomField>