force-app/main/default/objects/CRM_User__c/fields/Dazos_Usage_Data__c.field-meta.xml
<CustomField>
    <fullName>Dazos_Usage_Data__c</fullName>
    <label>Dazos Usage Data</label>
    <referenceTo>Dazos_Usage_Data__c</referenceTo>
    <relationshipLabel>CRM Users</relationshipLabel>
    <relationshipName>CRM_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>