force-app/main/default/objects/CRM_User__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stores the CRM User’s email.</description>
    <inlineHelpText>Stores the CRM User’s email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>