force-app/main/default/objects/CRM_User__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Stores the CRM User’s first name.</description>
    <inlineHelpText>Stores the CRM User’s first name.</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>