force-app/main/default/objects/CRM_User__c/fields/Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date__c</fullName>
    <description>Last login value of the CRM User’s login activity.</description>
    <inlineHelpText>Last login value of the CRM User’s login activity.</inlineHelpText>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>