force-app/main/default/objects/CRM_User__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Stores the CRM User’s last name.</description>
    <inlineHelpText>Stores the CRM User’s last name.</inlineHelpText>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>