force-app/main/default/objects/CRM_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Stores the CRM User’s role.</description>
    <inlineHelpText>Stores the CRM User’s role.</inlineHelpText>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>