force-app/main/default/objects/CRM_User__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Shows the current status of the CRM User.</description>
    <inlineHelpText>Shows the current status of the CRM User.</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>